# zhongguo-ii-pages

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  404.html  Makefile  README.md  config.py  index.html  mkdocs-dev.yml  mkdocs.yml  pyproject.toml  transform_zii_blocks.py
.github/workflows/: deploy.yml
01/: index.html
I/: index.html
II/: index.html
III/: index.html
IV/: index.html
IX/: index.html
V/: index.html
VI/: index.html
VII/: index.html
VIII/: index.html
X/: index.html
github-pages/: 01.md  index.md
github-pages/styles/: novel.css
pages/: I.md  II.md  index.md  style_guide.md
pages/styles/: novel.css
search/: search_index.json
style_guide/: index.html
styles/: chat.css  main.css  novel.css  novel.js
